--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link href="node_modules/gridstack/dist/gridstack.min.css" rel="stylesheet" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"></script> -->
   <title>StackOverClone</title>
 </head>
 
